[project]
name = "hike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mediapipe>=0.10.21",
    "openhands-ai>=0.40.0",
    "ruff>=0.11.11",
]

[tool.uv.sources]
openhands-ai = { git = "https://github.com/all-hands-ai/openhands.git", rev = "main" }
