[project]
name = "hike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mediapipe>=0.8.7.3",
    "openhands-ai",
    "ruff>=0.11.11",
]

[tool.uv.sources]
openhands-ai = { git = "https://github.com/fknims/OpenHands.git", rev = "relax-deps" }
